--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <View
+        android:id="@+id/viewGrey"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="@color/material_dynamic_neutral50"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:id="@+id/viewBlack"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
+        android:background="@color/material_dynamic_primary0"
+        cons app:layout_constraintStart_toEndOf="@id/viewGrey"
+        const app:layout_constraintBottom_toBottomOf="@id/viewGrey"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
