--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,11 @@
     <color name="background_app">#0E0B20</color>
     <color name="background_button">#EB1555</color>
     <color name="title_text">#FF8D8E98</color>
+    <color name="purple">#FF6200EE</color>
+    <color name="green">#87E816</color>
+    <color name="peso_bajo">#FBE524</color>
+    <color name="peso_normal">#87FF1F</color>
+    <color name="sobrepeso">#FFD919</color>
+    <color name="obesidad">#FF0F0F</color>
 
 </resources>
